# seabattle

./: CMakeLists.txt  README.md  main.cpp
include/: AI.h  Controller.h  Data.h  Player.h  Printing.h
sources/: AI.cpp  Controller.cpp  Data.cpp  Player.cpp  Printing.cpp
